src/content/docs/versions/http-api/0.5.x/inputs/mp4.mdx
---
title: MP4
slug: http-api/0.5.x/http-api/inputs/mp4
---

import { Aside, Badge, Code } from '@astrojs/starlight/components';
import CollapsibleDetails from '@components/CollapsibleDetails.astro';

An input type that allows Smelter to read static MP4 files.

<Aside>MP4 files can contain video and audio tracks encoded with various codecs. This input type supports MP4 video tracks encoded with `h264` and audio tracks encoded with `AAC`.</Aside>
<Aside type="caution">If the file contains multiple audio or video tracks, only the first audio track and the first video track will be processed; all additional tracks will be ignored.</Aside>

## Usage

To use MP4 Input you must register it first. You can do it by sending a request like this:

<CollapsibleDetails summaryTitle="Example request" open>
  ```http
  POST: /api/input/:input_id/register
  Content-Type: application/json

  {
    "type": "mp4",
    "url": "https://example.com/video.mp4"
  }
  ```
</CollapsibleDetails>

See [HTTP Routes](/http-api/0.5.x/routes#inputs-configuration) documentation to learn more about managing inputs.

## Reference

<CollapsibleDetails summaryTitle="Type definition" open>
  ```tsx
  type Mp4Input = {
    type: "mp4";
    url?: string;
    path?: string;
    loop?: bool;
    required?: bool;
    offset_ms?: f64;
    decoder_map?: DecoderMap;
  }
  ```
</CollapsibleDetails>

Parameters for registering an MP4 file as an input.

<Aside>Exactly one of `url` or `path` has to be defined.</Aside>

## Properties

### url

URL of the MP4 file.

* **Type**: `string`

***

### path

Path to the MP4 file.

* **Type**: `string`

***

### loop

Specifies whether the input should be played in a loop.

* **Type**: `bool`
* **Default value**: `false`

***

### required

Determines if the input stream is essential for output frame production. If set to true and the stream is delayed, Smelter will postpone output frames until the stream is received.

* **Type**: `bool`
* **Default value**: `false`

***

### offset\_ms

Offset in milliseconds relative to the pipeline start (start request). If unspecified, the stream synchronizes based on the delivery time of the initial frames.

* **Type**: `f64`

***

### decoder\_map

Assigns which decoder should be used for media encoded with a specific codec.

* **Type**: [`DecoderMap`](#decodermap)

## DecoderMap

Maps codecs to the provided decoders.

<CollapsibleDetails summaryTitle="Type definitions" open>
  ```tsx
  type DecoderMap = {
    h264?: 'ffmpeg_h264' | 'vulkan_h264';
  };
  ```
</CollapsibleDetails>

### Properties

#### h264

H264 decoder configuration.

* **Type**: `'ffmpeg_h264' | 'vulkan_h264'`
* **Default value**: If available `vulkan_h264` will be used, otherwise `ffmpeg_h264`
* **Supported values**:
  * `"ffmpeg_h264"` - Software H264 decoder based on FFmpeg.
  * `"vulkan_h264"` (<Badge text="Required feature: vk-video" variant="note" />) - Hardware decoder. Requires GPU that supports Vulkan Video decoding.
